<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mxpio</groupId>
	<artifactId>mxpio-boot-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>mxpio-boot</name>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.3</version>
	</parent>
	<properties>
		<mxpio.version>0.0.1-SNAPSHOT</mxpio.version>
		<java.version>1.8</java.version>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		<swagger.version>2.9.2</swagger.version>
		<fastjson.version>1.2.76</fastjson.version>
		<druid.version>1.2.6</druid.version>
	</properties>
	<modules>
		<module>mxpio-boot-base-autoconfigure</module>
		<module>mxpio-boot-base-jpa</module>
		<module>mxpio-boot-base-common</module>
		<module>mxpio-boot-base-security</module>
		<module>mxpio-boot-module-erp</module>
		<module>mxpio-boot-base-ddm</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.11.Final</version>
		</dependency>

		<!--Spring boot 安全框架 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!--Spring boot Web容器 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- spring boot 缓存 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-boot-base-autoconfigure</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-boot-base-common</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-boot-base-jpa</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-boot-base-security</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.mxpio</groupId>
				<artifactId>mxpio-boot-base-ddm</artifactId>
				<version>${mxpio.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.whvcse</groupId>
				<artifactId>easy-captcha</artifactId>
				<version>1.6.2</version>
			</dependency>

			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>2.2.2</version>
			</dependency>

			<!--Spring boot Redis -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-redis</artifactId>
				<version>2.4.3</version>
			</dependency>
			<!--spring boot 集成redis所需common-pool2 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-pool2</artifactId>
				<version>2.9.0</version>
			</dependency>

			<!-- Swagger UI 相关 -->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<!-- druid数据源驱动 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>

			<!-- fastjson -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
			<dependency>
			    <groupId>com.auth0</groupId>
			    <artifactId>java-jwt</artifactId>
			    <version>3.14.0</version>
			</dependency>
			<dependency>
			    <groupId>commons-beanutils</groupId>
			    <artifactId>commons-beanutils</artifactId>
			    <version>1.9.4</version>
			</dependency>
			<dependency>
			    <groupId>commons-codec</groupId>
			    <artifactId>commons-codec</artifactId>
			    <version>1.15</version>
			</dependency>
		</dependencies>

	</dependencyManagement>
</project>